<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="3dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/choose"
            style="?android:attr/buttonStyle"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_margin="3dp"
            android:background="@drawable/bt_shape"
            android:textColor="@color/white"
            android:text="@string/choose" />

        <Button
            android:id="@+id/clear"
            style="?android:attr/buttonStyle"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_margin="3dp"
            android:background="@drawable/bt_shape"
            android:textColor="@color/white"
            android:text="@string/clear" />

        <Button
            android:id="@+id/start"
            style="?android:attr/buttonStyle"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_margin="3dp"
            android:background="@drawable/bt_shape"
            android:textColor="@color/white"
            android:text="@string/start" />

        <Button
            android:id="@+id/end"
            style="?android:attr/buttonStyle"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_margin="3dp"
            android:background="@drawable/bt_shape"
            android:textColor="@color/white"
            android:text="@string/end" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
        android:id="@+id/file"
        style="?android:attr/buttonStyle"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_margin="3dp"
        android:background="@drawable/bt_shape"
        android:text="@string/file"
        android:textColor="@color/white" />

    </LinearLayout>

        <TextView
            android:id="@+id/shuoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollHorizontally="false" />

    </LinearLayout>